Update image paths to match uploaded PNG assets

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="slide" data-title="LAUSANNE WORKPLACE FORUM" data-sub="AFRICA &amp; THE MIDDLE EAST
 KINGDOM IMPACT IN EVERY SPHERE OF LIFE
 August 6-9, 2026
-ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
+ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.png')">
         <div class="hero-inner container">
           <h1 class="hero-title">LAUSANNE WORKPLACE FORUM</h1>
           <p class="hero-sub">
@@ -53,7 +53,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
         </div>
       </div>
 
-      <div class="slide" data-title="READY TO BEGIN YOUR JOURNEY?" data-sub="Discover how faith shapes work, leadership, and everyday life — across cultures, contexts, and continents." style="background-image: url('assets/hero-transition-1.jpg')">
+      <div class="slide" data-title="READY TO BEGIN YOUR JOURNEY?" data-sub="Discover how faith shapes work, leadership, and everyday life — across cultures, contexts, and continents." style="background-image: url('assets/hero-transition-1.png')">
         <div class="hero-inner container hero-center">
           <h2 class="hero-title small">READY TO BEGIN YOUR JOURNEY?</h2>
           <p class="hero-sub mid">Discover how faith shapes work, leadership, and everyday life — across cultures, contexts, and continents.</p>
@@ -63,7 +63,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
         </div>
       </div>
 
-      <div class="slide" data-title="From every corner of creation..." data-sub="" style="background-image: url('assets/hero-transition-2.jpg')">
+      <div class="slide" data-title="From every corner of creation..." data-sub="" style="background-image: url('assets/hero-transition-2.png')">
         <div class="hero-inner container hero-center">
           <h2 class="hero-title small">From every corner of creation...</h2>
         </div>
@@ -83,7 +83,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
 
       <div class="cards-grid">
         <div class="card">
-          <img src="assets/card1.jpg" alt="Quick facts">
+          <img src="assets/Quick Facts.png" alt="Quick facts">
           <div class="card-body">
             <h3>Quick Facts</h3>
             <p>What is the Africa and Middle East Forum about?</p>
@@ -96,7 +96,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
         </div>
 
         <div class="card">
-          <img src="assets/card2.jpg" alt="Who should attend">
+          <img src="assets/Who should attend.png" alt="Who should attend">
           <div class="card-body">
             <h3>Who Should Attend</h3>
             <p>Designed for leaders engaging culture through work.</p>
@@ -109,7 +109,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
         </div>
 
         <div class="card">
-          <img src="assets/card3.jpg" alt="What to expect">
+          <img src="assets/What to expect.png" alt="What to expect">
           <div class="card-body">
             <h3>What to Expect</h3>
             <p>A space for dialogue, learning, and shared experiences.</p>
@@ -121,7 +121,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
         </div>
 
         <div class="card">
-          <img src="assets/card4.jpg" alt="Language & accessibility">
+          <img src="assets/Language & Accessability.png" alt="Language & accessibility">
           <div class="card-body">
             <h3>Language & Accessibility</h3>
             <p>Committed to inclusive and accessible participation.</p>
@@ -147,11 +147,11 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.jpg')">
 
         <div class="mosaic">
           <div class="mosaic-left">
-            <img src="assets/card2.jpg" alt="">
+            <img src="assets/Regional Focus -1.png" alt="">
           </div>
           <div class="mosaic-right">
-            <img src="assets/card4.jpg" alt="">
-            <img src="assets/card3.jpg" alt="">
+            <img src="assets/Regional Focus -4.png" alt="">
+            <img src="assets/Regional Focus - 3.png" alt="">
           </div>
         </div>
 
