--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <div class="logo">Lausanne <span class="dot">Movement</span></div>
+      <div class="logo"><img src="assets/lausanne-logo.png" </div>
       <nav class="main-nav">
         <ul>
           <li><a href="#">Forums</a></li>
