--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ ACCRA, GHANA" style="background-image: url('assets/hero-pyramids.png')">
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
-        <img src="" alt="Lausanne Movement logo" style="height:36px; opacity:.8;">
+        <img src="assets/lausanne-logo.png" alt="Lausanne Movement logo"style="height:36px; opacity:.8;">
       </div>
       <div class="footer-links">
         <div>
